# cpp-stat-bench

./: .clang-format  .clang-tidy  .clang-tidy-checker  .cmake-format.py  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  CTestCustom.cmake  NOTICE.txt  Pipfile  README.md  codecov.yml  conanfile.py  cspell.json  iwyu_mappings.imp  mypy.ini  pyproject.toml  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
doc/: CMakeLists.txt
doc/doxygen/: .clang-format  CMakeLists.txt  Doxyfile.in  DoxygenREADME.md  examples.h  namespaces.h
doc/sphinx/: CMakeLists.txt  Doxyfile.in  start_auto_build.sh.in
doc/sphinx/src/: about.md  about.rst  command_line_options.md  conf.py  convention.rst  directories.rst  how_to_build_in_repository.md  how_to_use.md  index.rst  installation.md  todos.rst
doc/sphinx/src/basic_api/: bench.rst  fixture.rst  index.rst  macros.rst  main.rst
doc/sphinx/src/basic_design/: basic_structure.puml  classes_measure.puml  classes_reporter.puml  classes_run_bench.puml  index.md  index.rst  use_cases.puml
doc/sphinx/src/change_log/: before_v0.8.1.md  index.rst  v0.10.0.md  v0.11.0.md  v0.11.1.md  v0.12.0.md  v0.12.1.md  v0.12.2.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.15.1.md  v0.15.2.md  v0.15.3.md  v0.16.0.md  v0.17.0.md  v0.17.1.md  v0.18.0.md  v0.19.0.md  v0.20.0.md  v0.21.0.md  v0.22.0.md  v0.23.0.md  v0.24.0.md  v0.25.0.md  v0.25.1.md  v0.25.2.md  v0.26.0.md  v0.8.1.md  v0.8.2.md  v0.9.0.md
doc/sphinx/src/design/: classes.md  classes_define_bench.puml  classes_param.puml  classes_plot.puml  (+3 more)
examples/: .clang-tidy  CMakeLists.txt  bench_containers.cpp  bench_fibonacci.cpp  bench_for.cpp  bench_push_back.cpp  configure_plotting.cpp  custom_output_with_stat.cpp  custom_output_without_stat.cpp  parameterized_benchmark.cpp  simple_benchmark.cpp
src/: CMakeLists.txt  source_list.cmake  unity_source.cpp
src/stat_bench/: CMakeLists.txt  benchmark_case_name.cpp  benchmark_full_name.cpp  benchmark_group_name.cpp  custom_output_name.cpp  measurement_config.cpp  output_name.cpp  plot_options.cpp  runner.cpp  source_list.cmake  unity_source.cpp  use_pointer.cpp
src/stat_bench/bench/: benchmark_case_registry.cpp  benchmark_group.cpp
src/stat_bench/bench_impl/: benchmark_case_registry.cpp  benchmark_group.cpp  benchmark_group_config.cpp  benchmark_group_register.cpp  invocation_context_registry.cpp
src/stat_bench/clock/: monotone_clock_impl.cpp  monotone_time_point.cpp  system_time_point.cpp
src/stat_bench/filters/: composed_filter.cpp  glob_filter.cpp  regex_filter.cpp
src/stat_bench/impl/: monotone_clock_impl.cpp
src/stat_bench/measurer/: calc_stat.cpp  determine_iterations.cpp  determine_warming_up_samples.cpp  generate_default_measurement_configs.cpp  max_processing_time_measurer.cpp  mean_processing_time_measurer.cpp  measure_once.cpp  measurement_type.cpp  measurer.cpp  measurer_name.cpp  processing_time_measurer.cpp
src/stat_bench/param/: parameter_dict.cpp  parameter_generator.cpp  parameter_name.cpp
src/stat_bench/plots/: box_plot.cpp  box_trace.h  cdf_line_plot.cpp  common_labels.h  create_data_table.cpp  create_data_table.h  i_plotly_trace.h  jinja_renderer.cpp  line_trace.h  parameter_to_output_line_plot.cpp  parameter_to_time_box_plot.cpp  parameter_to_time_line_plot.cpp  parameter_to_time_violin_plot.cpp  plot_by_parameter_impl.h  plot_utils.cpp  plotly_plotter.cpp  plotly_trace_common.h  samples_line_plot.cpp  time_to_output_by_parameter_line_plot.cpp  violin_plot.cpp  violin_trace.h
src/stat_bench/reporter/: cdf_line_plot_reporter.cpp  compressed_msgpack_reporter.cpp  console_reporter.cpp  data_file_helper.cpp  data_file_reporter_base.cpp  data_file_schema_url.h  jinja_renderer.cpp  json_reporter.cpp  msgpack_reporter.cpp  plot_reporter.cpp  render_template.cpp  simple_line_plot_reporter.cpp  violin_plot_reporter.cpp
src/stat_bench/runner/: command_line_parser.cpp  runner.cpp
src/stat_bench/stat/: calc_stat.cpp  statistics.cpp
src/stat_bench/util/: check_glob_pattern.cpp  escape_for_file_name.cpp  escape_for_html.cpp  prepare_directory.cpp  pthread_sync_barrier.h  statistics.cpp  sync_barrier.cpp  use_pointer.cpp  utf8_string.cpp  windows_sync_barrier.h
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt  bench_do_not_optimize.cpp
tests/conan_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/include/catch2/: catch.hpp
tests/integ/: CMakeLists.txt  bench_executor.py  conftest.py  custom_measurement.cpp  custom_measurement_test.py  define_and_register_case.cpp  duplicate_cases.cpp  duplicate_cases_test.py  error_in_benchmark.cpp  error_in_benchmark_test.py  escaped_names.cpp  escaped_names_test.py  example_benchmark.cpp  groups_and_cases.cpp  groups_and_cases_test.py  parametrized_benchmark.cpp  parametrized_benchmark_test.py  reporters_test.py  scrubbers.py  simple_benchmark.cpp  subplots.cpp  test_command_line.py  use_fixture.cpp
tests/integ/approvals/: TestCommandLine.test_help.approved.txt  TestCommandLine.test_invalid_option.approved.txt  TestCommandLine.test_short_help.approved.txt  TestCustomMeasurement.test_custom_measurement.approved.txt  TestDuplicateCases.test_duplicate_cases.approved.txt  TestErrorsInBenchmarks.test_error_in_benchmark.approved.txt  TestGroupsAndCases.test_exclude.approved.txt  TestGroupsAndCases.test_exclude_regex.approved.txt  TestGroupsAndCases.test_execute_all.approved.txt  TestGroupsAndCases.test_include.approved.txt  TestGroupsAndCases.test_include_and_exclude.approved.txt  TestGroupsAndCases.test_include_and_exclude_regex.approved.txt  TestGroupsAndCases.test_include_regex.approved.txt  TestParametrizedBenchmarks.test_parametrized_benchmark.approved.txt
tests/units/: CMakeLists.txt  source_list.cmake  test_main.cpp  trompeloeil.h  unity_source.cpp
tests/units/stat_bench/: benchmark_condition_test.cpp  benchmark_full_name_test.cpp  do_not_optimize_test.cpp  fixture_base_test.cpp  invocation_context_test.cpp  memory_barrier_test.cpp  mock_benchmark_case.h  mock_fixture.h  runner_test.cpp
(+327 files in other folders)
