[tool.poetry]
name = "cpp-stat-bench"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
# Some tools require setuptools.
setuptools = "^75.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-approvaltests = "^0.2.4"
fastjsonschema = "^2.21.1"
msgpack = "^1.1.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^8.1.3"
sphinx-orange-book-theme = "^0.15.0"
sphinxcontrib-plantuml = "^0.30"
breathe = "^4.35.0"
myst-parser = "^4.0.0"

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.11.11"
black = "^24.10.0"
cmakelang = "^0.6.13"
doc8 = "^1.1.2"
pre-commit = "^4.0.1"
sphinx-autobuild = "^2024.10.3"
clang-tidy-checker = "^0.6.0"
lcov-cobertura = "^2.0.2"
jinja2 = "^3.1.5"
jsonschema2md = "^1.3.0"
click = "^8.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
