[tool.poetry]
name = "cpp-stat-bench"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Some tools require setuptools.
setuptools = "^80.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-approvaltests = "^0.2.4"
fastjsonschema = "^2.21.1"
msgpack = "^1.1.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^8.2.3"
sphinx-orange-book-theme = "^0.15.0"
sphinxcontrib-plantuml = "^0.30"
breathe = "^4.36.0"
myst-parser = "^4.0.1"
sphinx-togglebutton = "^0.3.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
cmakelang = "^0.6.13"
doc8 = "^1.1.2"
pre-commit = "^4.2.0"
sphinx-autobuild = "^2024.10.3"
clang-tidy-checker = "^0.6.0"
lcov-cobertura = "^2.1.1"
jsonschema2md = "^1.5.2"
click = "^8.1.8"
isort = "^6.0.1"
pylint = "^3.3.6"
flake8 = "^7.2.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long,fixme,too-few-public-methods,redefined-outer-name,redefined-builtin,too-many-arguments"
load-plugins = "pylint.extensions.docparams"

[tool.isort]
profile = "black"
